# newsdock

./: Cargo.toml  README.md
.github/: pull_request_template.md
.github/workflows/: rust.yml
assets/: EntityDiagram
migrations/2021-12-27-054222_rss_item/: up.sql
src/: lib.rs  main.rs
src/cache/: cache_file_ops.rs  downloader.rs  mod.rs
src/conf/: cli.rs  mod.rs
src/db/: mod.rs
src/fs/: mod.rs
src/models/: mod.rs  schema.rs
src/newsboat_utils/: bin_utils.rs  conf_utils.rs  mod.rs
src/opener/: mod.rs
