[package]
name = "newsdock"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"

[dependencies]
clap = { version = "3", features = ["derive"] }
diesel = { version = "1.4.8", features = ["sqlite"] }
dirs = "^4.0"
readonly = "0.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "^1.0"
serde_derive = "^1.0"
thiserror = "^1.0"
