[package]
name = "newsdock"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"

[dependencies]
clap = { version = "3", features = ["derive"] }
diesel = { version = "1.4.8", features = ["sqlite"] }
dirs = "^4.0"
exitcode = "1"
log = "0.4"
readonly = "0.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "^1.0"
serde_derive = "^1.0"
simple_logger = "2"
thiserror = "^1.0"
