[package]
name = "newsdock"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
diesel = { version = "1", features = ["sqlite"] }
dirs = "4"
exitcode = "1"
log = "0.4"
readonly = "0.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1"
serde_derive = "1"
simple_logger = "2"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
